# digital-twin

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  mypy.ini  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  ci.yml  deploy.yml
apps/backend/: .flake8  Dockerfile  project.json  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: b2c3d4e5f6a7_add_owner_tokens.py  c3d4e5f6a7b8_add_cv_processing_jobs.py  d4e5f6a7b8c9_add_chat_tables.py  e5f6a7b8c9d0_add_notifications.py  efc842b1f7de_initial_schema_owners_owner_sessions_.py  f6a7b8c9d0e1_add_digital_twin_config.py
apps/backend/scripts/: db-init.sql  seed_data.py
apps/backend/src/: main.py  settings.py
apps/backend/src/api/: __init__.py  deps.py  router.py
apps/backend/src/auth/: __init__.py  oauth.py  rate_limit.py  router.py  schemas.py  security.py  service.py  tokens.py
apps/backend/src/chat/: __init__.py  boundaries.py  prompts.py  rate_limit.py  router.py  schemas.py  service.py
apps/backend/src/config/: __init__.py  defaults.py  router.py  schemas.py  service.py
apps/backend/src/core/: __init__.py  errors.py  middleware.py
apps/backend/src/db/: base.py  models.py  session.py
apps/backend/src/email/: __init__.py  sender.py
apps/backend/src/llm/: __init__.py  claude.py
apps/backend/src/notifications/: __init__.py  encryption.py  events.py  pushover_client.py  router.py  schemas.py  service.py
apps/backend/src/profiles/: __init__.py  extraction.py  router.py  schemas.py  service.py  storage.py
apps/backend/src/worker/: __init__.py  celery_app.py
apps/backend/src/worker/tasks/: __init__.py  cv.py  notifications.py  ping.py
apps/backend/tests/: conftest.py  test_api_foundation.py  test_auth.py  test_auth_oauth.py  test_auth_tokens.py  test_chat.py  test_config.py  test_cv_processing.py  test_cv_upload.py  test_db_models.py  test_main.py  test_notifications.py  test_phase1_integration.py  test_phase2_integration.py  test_profile_summary.py  test_profiles.py  test_worker.py
apps/frontend/: Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.mts
apps/frontend/docker/: nginx.conf
apps/frontend/src/: styles.css  vite-env.d.ts
apps/frontend/src/app/: app.spec.tsx  app.tsx  nx-welcome.tsx  routes.tsx  shared-lib-integration.spec.tsx
apps/frontend/src/layouts/: DashboardLayout.module.css  DashboardLayout.spec.tsx  DashboardLayout.tsx  PublicLayout.module.css  PublicLayout.tsx
apps/frontend/src/pages/: AboutPage.tsx  ChatPage.tsx  DashboardPage.tsx  ForgotPasswordPage.tsx  HomePage.spec.tsx  HomePage.tsx  LoginPage.spec.tsx  LoginPage.tsx  Page.module.css  (+5 more)
docs/: CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_MASTER_PLAN.md  OPERATIONAL_CONCEPT.md  PRD.md  PROJECT.md  TECHNICAL_DESIGN.md
docs/phase-0/: PR_BREAKDOWN.md  QUICK_REFERENCE.md  README.md
docs/phase-1/: PR_BREAKDOWN.md
docs/phase-2/: PR_BREAKDOWN.md
docs/phase-3/: PR_BREAKDOWN.md
libs/backend-shared/: .flake8  README.md  project.json  pyproject.toml
libs/backend-shared/backend_shared/: __init__.py  exceptions.py  logging.py  schemas.py  types.py  utils.py
libs/backend-shared/src/: __init__.py
libs/backend-shared/tests/: test_exceptions.py  test_import.py  test_logging.py  test_schemas.py  test_utils.py
libs/frontend-shared/: README.md  package.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.mts
libs/frontend-shared/src/: index.ts
scripts/: _common.sh  db-migrate.sh  db-reset.sh  db-seed.sh  run-format.sh  run-mypy.sh  smoke-phase1.sh  smoke-phase2.sh  smoke-phase3.sh  start-dev.sh  validate-env.py
scripts/tests/: test_validate_env.py
(+68 files in other folders)
