[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/backend/html'
 --cov-report xml:'../../coverage/apps/backend/coverage.xml'
 --html='../../reports/apps/backend/unittests/html/index.html'
 --junitxml='../../reports/apps/backend/unittests/junit.xml'
"""

[tool.poetry]
name = "digital-twin-backend"
version = "1.0.0"
description = "Digital Twin backend (FastAPI application)"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "src"

  [tool.poetry.dependencies]
  python = ">=3.11,<3.15"
  fastapi = "^0.115.0"
  uvicorn = {extras = ["standard"], version = "^0.32.0"}

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.3.1"
  flake8 = "7.1.1"
  pytest = "8.3.4"
  pytest-sugar = "1.0.0"
  pytest-cov = "6.0.0"
  pytest-html = "4.1.1"
  httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
