[tool.coverage.run]
branch = true
source = [ "backend_shared" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../coverage/libs/backend-shared/html'
 --cov-report xml:'../../coverage/libs/backend-shared/coverage.xml'
 --html='../../reports/libs/backend-shared/unittests/html/index.html'
 --junitxml='../../reports/libs/backend-shared/unittests/junit.xml'
"""

[tool.poetry]
name = "digital-twin-backend-shared"
version = "1.0.0"
description = "Shared backend utilities for the Digital Twin platform."
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "backend_shared"

  [tool.poetry.dependencies]
  python = ">=3.11,<3.15"
  pydantic = "^2.9.0"
  cryptography = "^44.0.0"
  python-json-logger = "^3.2.0"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.3.1"
  flake8 = "7.1.1"
  black = "25.1.0"
  mypy = "1.15.0"
  pytest = "8.3.4"
  pytest-sugar = "1.0.0"
  pytest-cov = "6.0.0"
  pytest-html = "4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
